# strike-libwayland

./: meson.build
src/: Makefile  internal_settings.hpp  main.cpp  meson.build  wlr.h  wlr_scene_cpp.h
src/debug/: debug.cpp  debug.hpp
src/proccess/: proccess.cpp  proccess.hpp
src/wayland_objects/: destroy.hpp  helpers.cpp  helpers.hpp  notify.cpp  objects.cpp  objects.hpp
